# scala-rule-engine-workshop

./: README.md
scala-rule-engine-workshop/src/test/scala/com/wixpress/rules/workshop/: BUILD.bazel  Fact.scala  Rule.scala  RulesEngine.scala  RulesEngineWorkshopTest.scala
