package(default_visibility = ["//visibility:public"])

specs2_unit_test(
    name = "workshop",
    srcs = [
        "//scala-rule-engine-workshop/src/test/scala/com/wixpress/rules/workshop:sources",
    ],
    deps = [
        "@com_boundary_high_scale_lib",
        "@com_fasterxml_jackson_core_jackson_annotations",
        "@com_fasterxml_jackson_module_jackson_module_scala_2_12",
        "@com_softwaremill_quicklens_quicklens_2_12",
        "@com_thesamet_scalapb_lenses_2_12",
        "@com_thesamet_scalapb_scalapb_runtime_2_12",
        "@com_wix_specs2_jmock_2_12",
        "@io_grpc_grpc_core",
        "@org_asynchttpclient_async_http_client",
        "@org_http4s_http4s_core_2_12",
        "@org_jmock_jmock",
        "@org_mockito_mockito_core",
        "@org_springframework_spring_web",
        "@server_infra//framework/grpc/infra-testkit/src/main/scala/com/wixpress/grpc/testkit",
        "@wix_framework//hoopoe-common/hoopoe-data-structures",
        "@wix_framework//hoopoe-common/hoopoe-data-structures/src/main/java/com/wixpress/hoopoe/ids",
        "@wix_framework//hoopoe-common/hoopoe-time-utils",
        "@wix_framework//hoopoe-common/hoopoe-utest",
        "@wix_framework//hoopoe-core",
        "@wix_framework//json-modules/hoopoe-json-mapper",
    ],
)

sources()
